--- a/StudentRegistrationSystem.WebApp/Views/Shared/_Layout.cshtml
+++ b/StudentRegistrationSystem.WebApp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - StudentRegistrationSystem.WebApp</title>
+    <title>@ViewData["Title"] - StudentRegistrationSystem</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/StudentRegistrationSystem.WebApp.styles.css" asp-append-version="true" />
@@ -20,13 +20,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Admin Login</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><b>Admin Login</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Index">Students</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Index"><b>Students</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Create">Add Student</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Create"><b>Add Student</b></a>
                         </li>
                        
                     </ul>
