--- a/StudentRegistrationSystem.WebApp/Views/Student/Index.cshtml
+++ b/StudentRegistrationSystem.WebApp/Views/Student/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Student>
+﻿@model List<StudentViewModel>
 @if (TempData != null)
 {
     <div class="alert alert-success" role="alert">
@@ -17,7 +17,7 @@
             <th scope="col">Class</th>
             <th scope="col">Department</th>
             <th scope="col">Mail</th>
-            <th scope="col">Education Time</th>
+            <th scope="col">Education<br/>Time</th>
         </tr>
     </thead>
     <tbody>
