--- a/StudentRegistrationSystem.WebApp/Views/Home/Index.cshtml
+++ b/StudentRegistrationSystem.WebApp/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿
+@model AdminViewModel
 
 <div class="text-center">
     <h1 class="display-4">LOTUS</h1>
@@ -13,20 +12,24 @@
                 <h3>Student Registration System </h3>
             </div>
         </div>
-        <form>
+        <div asp-validation-summary="ModelOnly">  </div>
+        <form asp-controller="Home" asp-action="Index" method="post">
             <div class="mb-3">
-                <label class="form-label" for="card-email">Authorized Person User Name</label>
-                <input class="form-control" id="card-email" type="text" />
+                <label asp-for="AdminName"  class="form-label" for="card-email">Authorized Person User Name</label>
+                <input asp-for="AdminName" class="form-control"  type="text" />
+                <span class="text-danger" asp-validation-for="AdminName"></span>
             </div>
             <div class="mb-3">
                 <div class="d-flex justify-content-between">
-                    <label class="form-label" for="card-password">Password</label>
+                    <label asp-for="AdminPassword"class="form-label" for="card-password">Password</label>
                 </div>
-                <input class="form-control" id="card-password" type="password" />
+                <input asp-for="AdminPassword" class="form-control" id="card-password" type="password" />
+                <span class="text-danger" asp-validation-for="AdminName"></span>
             </div>
+            <button type="submit" class="btn btn-dark">Login</button>
         </form>
 
-        <a asp-controller="Student" asp-action="Index" class="btn btn-danger">Login</a>
+  
 
 
 
