--- a/StudentRegistrationSystem.WebApp/Views/_ViewImports.cshtml
+++ b/StudentRegistrationSystem.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using StudentRegistrationSystem.WebApp
 @using StudentRegistrationSystem.WebApp.Models
+@using StudentRegistrationSystem.WebApp.Models.StudentViewModel
+@using StudentRegistrationSystem.WebApp.Models.AdminViewModel
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
