--- a/StudentRegistrationSystem.WebApp/Views/Home/Index.cshtml
+++ b/StudentRegistrationSystem.WebApp/Views/Home/Index.cshtml
@@ -1,9 +1,16 @@
 ﻿
 @model AdminViewModel
 
-<div class="text-center">
-    <h1 class="display-4">LOTUS</h1>
-    <h2>Welcome to Turkish Software Developers School</a>.</h2>
+@section Scripts{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+        }
+<div> 
+
+    <h3> <b>LOTUS EDUCATION</b> </h3>
+    <br/>
+    <h3>Welcome to Turkish Software Developers School</h3>
 </div>
 <div class="col-md-7 d-flex flex-center">
     <div class="p-4 p-md-5 flex-grow-1">
@@ -12,24 +19,25 @@
                 <h3>Student Registration System </h3>
             </div>
         </div>
+        <br/>
         <div asp-validation-summary="ModelOnly">  </div>
-        <form asp-controller="Home" asp-action="Index" method="post">
+        <form asp-controller ="Student" asp-action="Index">
             <div class="mb-3">
-                <label asp-for="AdminName"  class="form-label" for="card-email">Authorized Person User Name</label>
+                <label asp-for="AdminName"  class="form-label" for="card-email">User Name</label>
                 <input asp-for="AdminName" class="form-control"  type="text" />
                 <span class="text-danger" asp-validation-for="AdminName"></span>
             </div>
             <div class="mb-3">
-                <div class="d-flex justify-content-between">
-                    <label asp-for="AdminPassword"class="form-label" for="card-password">Password</label>
-                </div>
-                <input asp-for="AdminPassword" class="form-control" id="card-password" type="password" />
-                <span class="text-danger" asp-validation-for="AdminName"></span>
+            <label asp-for="AdminPassword" class="form-label" for="card-email">Password</label>
+            <input asp-for="AdminPassword" class="form-control"  type="password" />
+                <span class="text-danger" asp-validation-for="AdminPassword"></span>
+                             
             </div>
-            <button type="submit" class="btn btn-dark">Login</button>
+            <br/>
+           
         </form>
-
+        <button type="button" class="btn btn-dark">Login</button>
   
-
+      
 
 
