--- a/StudentRegistrationSystem.WebApp/Views/Student/Update.cshtml
+++ b/StudentRegistrationSystem.WebApp/Views/Student/Update.cshtml
@@ -1,23 +1,34 @@
-﻿@model StudentViewModel
+﻿@model StudentUpdateViewModel
+<style>
+    button:hover {
+        background-color: burlywood;
+        color: brown;
+    }
+</style>
+
 
 <form asp-controller="Student" asp-action="Update" method="post">
     <div class="mb-3">
         <label asp-for="Name" class="form-label">Name</label>
         <input asp-for="Name" type="text" class="form-control">
+        <span class="text-danger" asp-validation-for="Name">  </span>
     </div>
 
     <div class="mb-3">
         <label asp-for="Surname" class="form-label">Surname</label>
         <input asp-for="Surname" type="text" class="form-control">
+        <span class="text-danger" asp-validation-for="Surname">  </span>
     </div>
     <div class="mb-3">
         <label asp-for="Class" class="form-label">Class</label>
-        <input asp-for="Class" type="text" class="form-control">
+        <input asp-for="Class" type="number" class="form-control">
+        <span class="text-danger" asp-validation-for="Class">  </span>
     </div>
 
     <div class="mb-3">
         <label asp-for="Email" class="form-label">E-mail</label>
-        <input asp-for="Email" type="email" class="form-control">
+        <input asp-for="Email" type="text" class="form-control">
+        <span class="text-danger" asp-validation-for="Email">  </span>
     </div>
 
     <div class="mb-3">
@@ -26,6 +37,7 @@
         <select class="form-select" asp-for="Department" asp-items="@ViewBag.DepartmentSelect">
             <option value="">Select Department</option>
         </select>
+        <span class="text-danger" asp-validation-for="Department">  </span>
     </div>
     <div class="mb-3">
         <label asp-for="DateOfRegistration" class="form-label">Date Of Registration : </label>
@@ -39,35 +51,34 @@
 
     <div class="mb-5">
         <span> Education Time </span>
-
         @foreach (var item in ViewBag.EducationTime as Dictionary<string, int>)
         {
             <div class="form-check mb-2">
-            @if(item.Key == ViewBag.radioEducationTime){
-                <input checked="checked" class="form-check-input" type="radio" id="@(item.Value)EducationTime"
+                <input class="form-check-input" type="radio" id="@(item.Value)EducationTime"
                        asp-for="EducationTime" value="@item.Value">
-            } else  
-            {
-
-                <input  class="form-check-input" type="radio" id="@(item.Value)EducationTime"
-                asp-for="EducationTime" value="@item.Value">
-                       }         
-                
                 <label class="form-check-label" asp-for="EducationTime" for="@(item.Value)EducationTime">
                     @item.Key
                 </label>
             </div>
+
+
+
         }
         <div class="form-floating mb-5">
-            <textarea class="form-control" placeholder="Student add description" id="floatingTextarea"></textarea>
+            <textarea asp-for="Description" placeholder="Student add description" class="form-control"></textarea>
             <label asp-for="Description">Student Description</label>
-            <span class="text-danger" asp-validation-for="Description">  </span>
+            <span class="text-danger" asp-validation-for="Description"></span>
         </div>
 
     </div>
 
 
-    <button type="submit" class="btn btn-dark">Student Update</button>
-
-
+    <button type="submit" class="btn btn-dark">Student Save</button>
 </form>
+@section Scripts{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+
+
+}
