--- a/StudentRegistrationSystem.WebApp/wwwroot/css/site.css
+++ b/StudentRegistrationSystem.WebApp/wwwroot/css/site.css
@@ -20,3 +20,11 @@ html {
 body {
   margin-bottom: 60px;
 }
+body {
+    margin-bottom: 60px;
+    background-color: #E7E9EB;
+}
+
+nav {
+    background-color: #183D3D;
+}
