--- a/StudentRegistrationSystem.WebApp/Views/Home/Index.cshtml
+++ b/StudentRegistrationSystem.WebApp/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
-﻿
+﻿@using StudentRegistrationSystem.WebApp.ViewModels
 @model AdminViewModel
+
 
 @section Scripts{
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
