--- a/StudentRegistrationSystem.WebApp/Views/_ViewImports.cshtml
+++ b/StudentRegistrationSystem.WebApp/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using StudentRegistrationSystem.WebApp
 @using StudentRegistrationSystem.WebApp.Models
-@using StudentRegistrationSystem.WebApp.Models.StudentViewModel
-@using StudentRegistrationSystem.WebApp.Models.AdminViewModel
+@using StudentRegistrationSystem.WebApp.ViewModels
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
